ADd --enable-preview flag to Maven Surefire plugin to allow use of Java 21 preview features in tests