@@ -242,8 +242,12 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.5.2</version>
 				<configuration>
-					<argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar -Xshare:off</argLine>
-					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Xshare:off</argLine>
+					<argLine>
+						-javaagent:${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar
+						-Xshare:off
+						--enable-preview
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
